Indication enfants ok dans les pop up du programme du samedi

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -954,9 +954,14 @@
 							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
 							<div style="margin-left:1rem">Atelier / Jeu</div>
 						</div>
-						<div class="limite-participants-details"><i class="material-icons-outlined">
-							lock
-						</i>24 participants</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined">
+								lock
+							</i>24 participants
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+							face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1116,9 +1121,14 @@
 							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
 							<div style="margin-left:1rem">Atelier / Jeu</div>
 						</div>
-						<div class="limite-participants-details"><i class="material-icons-outlined">
-							lock
-						</i>25 participants</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined">
+								lock
+							</i>25 participants
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1161,9 +1171,14 @@
 							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
 							<div style="margin-left:1rem">Atelier / Jeu</div>
 						</div>
-						<div class="limite-participants-details"><i class="material-icons-outlined">
-							lock
-						</i>20 participants</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined">
+								lock
+							</i>20 participants
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1340,9 +1355,16 @@
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
-					<div style="display:flex">
-						<div class="CF" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Conférence</div>
+					<div style="display:flex;justify-content: space-between">
+						<div style="display:flex">
+							<div class="CF" style="width:2rem;height: 1.5rem">&nbsp;</div>
+							<div style="margin-left:1rem">Conférence</div>
+						</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1405,9 +1427,16 @@
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
-					<div style="display:flex">
-						<div class="RE" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Retour d'expérience</div>
+					<div style="display:flex;justify-content: space-between">
+						<div style="display:flex">
+							<div class="RE" style="width:2rem;height: 1.5rem">&nbsp;</div>
+							<div style="margin-left:1rem">Retour d'expérience</div>
+						</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1497,9 +1526,16 @@
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
-					<div style="display:flex">
-						<div class="CF" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Conférence</div>
+					<div style="display:flex;justify-content: space-between">
+						<div style="display:flex">
+							<div class="CF" style="width:2rem;height: 1.5rem">&nbsp;</div>
+							<div style="margin-left:1rem">Conférence</div>
+						</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1541,9 +1577,14 @@
 							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
 							<div style="margin-left:1rem">Atelier / Jeu</div>
 						</div>
-						<div class="limite-participants-details"><i class="material-icons-outlined">
-							lock
-						</i>20 participants</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined">
+								lock
+							</i>20 participants
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1628,9 +1669,14 @@
 							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
 							<div style="margin-left:1rem">Atelier / Jeu</div>
 						</div>
-						<div class="limite-participants-details"><i class="material-icons-outlined">
-							lock
-						</i>12 participants</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined">
+								lock
+							</i>12 participants
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1709,9 +1755,14 @@
 							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
 							<div style="margin-left:1rem">Atelier / Jeu</div>
 						</div>
-						<div class="limite-participants-details"><i class="material-icons-outlined">
-							lock
-						</i>25 participants</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined">
+								lock
+							</i>25 participants
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1779,9 +1830,16 @@
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
-					<div style="display:flex">
-						<div class="AJ" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Atelier/Jeu</div>
+					<div style="display:flex;justify-content: space-between">
+						<div style="display:flex">
+							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
+							<div style="margin-left:1rem">Atelier/Jeu</div>
+						</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1863,9 +1921,16 @@
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
-					<div style="display:flex">
-						<div class="CF" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Conférence</div>
+					<div style="display:flex;justify-content: space-between">
+						<div style="display:flex">
+							<div class="CF" style="width:2rem;height: 1.5rem">&nbsp;</div>
+							<div style="margin-left:1rem">Conférence</div>
+						</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
@@ -1950,9 +2015,16 @@
 						<a href="#" data-dismiss="modal">X</a>
 					</div>
 					<hr/>
-					<div style="display:flex">
-						<div class="AJ" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Atelier/Jeu</div>
+					<div style="display:flex;justify-content: space-between">
+						<div style="display:flex">
+							<div class="AJ" style="width:2rem;height: 1.5rem">&nbsp;</div>
+							<div style="margin-left:1rem">Atelier/Jeu</div>
+						</div>
+						<div class="limite-participants-details">
+							<i class="material-icons-outlined" style="margin-left:0.5rem">
+								face
+							</i>Adapté aux enfants
+						</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
