Largeur de pop up corrigée

--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -802,7 +802,7 @@
 
 	<div class="modal fade" id="modal-keynote-lja" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-lja-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -830,7 +830,7 @@
 
 	<div class="modal fade" id="modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks" tabindex="-1" role="dialog" aria-labelledby="#modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -879,7 +879,7 @@
 
 	<div class="modal fade" id="modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser" tabindex="-1" role="dialog" aria-labelledby="#modal-agilo-park-un-serious-game-pour-apprendre-a-prioriser-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -931,7 +931,7 @@ Facilitateur, coach, formateur, il explore tous les jours de nouvelles pratiques
 
 	<div class="modal fade" id="modal-software-craftsmanship-il-est-temps-d-elever-le-niveau" tabindex="-1" role="dialog" aria-labelledby="#modal-software-craftsmanship-il-est-temps-d-elever-le-niveau-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -969,7 +969,7 @@ Mon but est d'accompagner tout le monde afin d’élever le niveau.
 
 	<div class="modal fade" id="modal-initiation-a-la-syste-mique-interactionnelle"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1017,7 +1017,7 @@ Mon but est d'accompagner tout le monde afin d’élever le niveau.
 
 	<div class="modal fade" id="modal-facilitation-graphique-passez-a-laction"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1071,7 +1071,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-la-collaboration-plus-que-la-negociation-contractuelle-en-vrai" tabindex="-1" role="dialog" aria-labelledby="#modal-la-collaboration-plus-que-la-negociation-contractuelle-en-vrai-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1130,7 +1130,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-la-question-du-sens-nous-fait-elle-toucher-les-limites-du-raisonnement" tabindex="-1" role="dialog" aria-labelledby="#modal-la-question-du-sens-nous-fait-elle-toucher-les-limites-du-raisonnement-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1174,7 +1174,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn" tabindex="-1" role="dialog" aria-labelledby="#modal-reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1210,7 +1210,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-ameliorer-son-feedback-exemple-en-revue-de-code" tabindex="-1" role="dialog" aria-labelledby="#modal-ameliorer-son-feedback-exemple-en-revue-de-code-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1249,7 +1249,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-un-cochon-peut-il-etre-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-un-cochon-peut-il-etre-agile-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1318,7 +1318,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-keynote-frederic-leguedois" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-frederic-leguedois-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1348,7 +1348,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-le-paradoxe-du-poisson-rouge" tabindex="-1" role="dialog" aria-labelledby="#modal-le-paradoxe-du-poisson-rouge-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1386,7 +1386,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-un-pacman-ping-ou-impact-mapping" tabindex="-1" role="dialog" aria-labelledby="#modal-un-pacman-ping-ou-impact-mapping-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1442,7 +1442,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-coding-dojos-partagez-les-bonnes-pratiques" tabindex="-1" role="dialog" aria-labelledby="#modal-coding-dojos-partagez-les-bonnes-pratiques-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1487,7 +1487,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-cook-my-retro" tabindex="-1" role="dialog" aria-labelledby="#modal-cook-my-retro-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1534,7 +1534,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-mes-premiers-pas-de-scrum-master" tabindex="-1" role="dialog" aria-labelledby="#modal-mes-premiers-pas-de-scrum-master-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1619,7 +1619,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-le-planning-la-racine-du-mal" tabindex="-1" role="dialog" aria-labelledby="#modal-le-planning-la-racine-du-mal-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1663,7 +1663,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-une-semaine-dans-ma-peau-de-testeur-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-une-semaine-dans-ma-peau-de-testeur-agile-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1705,7 +1705,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-alors-on-a-du-mal-a-comprendre-safe" tabindex="-1" role="dialog" aria-labelledby="#modal-alors-on-a-du-mal-a-comprendre-safe-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1748,7 +1748,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-la-spirale-agile-1" tabindex="-1" role="dialog" aria-labelledby="#modal-la-spirale-agile-1-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1803,7 +1803,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-lethique-et-les-tocs-du-product-owner" tabindex="-1" role="dialog" aria-labelledby="#modal-lethique-et-les-tocs-du-product-owner-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1835,7 +1835,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-on-sait-par-ou-on-rentre-on-ne-sait-pas-si-on-en-sortira" tabindex="-1" role="dialog" aria-labelledby="#modal-on-sait-par-ou-on-rentre-on-ne-sait-pas-si-on-en-sortira-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1873,7 +1873,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-from-devops-to-zero-ou-comment-foirer-son-product-management" tabindex="-1" role="dialog" aria-labelledby="#modal-from-devops-to-zero-ou-comment-foirer-son-product-management-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1898,7 +1898,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-r-evolution-des-organisations" tabindex="-1" role="dialog" aria-labelledby="#modal-r-evolution-des-organisations-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1941,7 +1941,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-un-clavier-pour-tous-tous-pour-un-clavier" tabindex="-1" role="dialog" aria-labelledby="#modal-un-clavier-pour-tous-tous-pour-un-clavier-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1977,7 +1977,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-une-auto-organisation-efficace-en-toute-confiance" tabindex="-1" role="dialog" aria-labelledby="#modal-une-auto-organisation-efficace-en-toute-confiance-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -2036,7 +2036,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-gerer-une-architecture-technique-dans-un-environnement-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-gerer-une-architecture-technique-dans-un-environnement-agile-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -2076,7 +2076,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 
 	<div class="modal fade" id="modal-rex-sur-les-pratiques-collectives-de-developpement" tabindex="-1" role="dialog" aria-labelledby="#modal-rex-sur-les-pratiques-collectives-de-developpement-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
