--- a/programme/vendredi_soir.html
+++ b/programme/vendredi_soir.html
@@ -225,7 +225,7 @@
 
 	<div class="modal fade" id="modal-ras-la-crepe-des-methodes-agiles-passons-aux-methodes-rigides" tabindex="-1" role="dialog" aria-labelledby="#modal-ras-la-crepe-des-methodes-agiles-passons-aux-methodes-rigides-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -266,7 +266,7 @@
 
 	<div class="modal fade" id="modal-les-enfants-terribles-de-lagilite-latelier-ludo-parodico-pedagogique" tabindex="-1" role="dialog" aria-labelledby="#modal-les-enfants-terribles-de-lagilite-latelier-ludo-parodico-pedagogique-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
