--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -857,7 +857,7 @@
 
 	<div class="modal fade" id="modal-keynote-emilie-esposito" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-emilie-esposito-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -898,7 +898,7 @@
 
 	<div class="modal fade" id="modal-kiffer-son-job-ca-booste" tabindex="-1" role="dialog" aria-labelledby="#modal-kiffer-son-job-ca-booste-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -941,7 +941,7 @@
 
 	<div class="modal fade" id="modal-fish-philosophy" tabindex="-1" role="dialog" aria-labelledby="#modal-fish-philosophy-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -985,7 +985,7 @@
 
 	<div class="modal fade" id="modal-a-playful-approach-to-collective-performance" tabindex="-1" role="dialog" aria-labelledby="#modal-a-playful-approach-to-collective-performance-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1033,7 +1033,7 @@
 
 	<div class="modal fade" id="modal-le-defi-collaboratif-lego-testez-votre-agilite-collective" tabindex="-1" role="dialog" aria-labelledby="#modal-le-defi-collaboratif-lego-testez-votre-agilite-collective-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1065,7 +1065,7 @@
 
 	<div class="modal fade" id="modal-une-vision-du-sport-de-haut-niveau-par-un-praticien-assidu" tabindex="-1" role="dialog" aria-labelledby="#modal-une-vision-du-sport-de-haut-niveau-par-un-praticien-assidu-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1108,7 +1108,7 @@
 
 	<div class="modal fade" id="modal-devenez-une-famille-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-devenez-une-famille-agile-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1158,7 +1158,7 @@
 
 	<div class="modal fade" id="modal-dessine-les-supers-pouvoirs-d-un-chevalier" tabindex="-1" role="dialog" aria-labelledby="#modal-dessine-les-supers-pouvoirs-d-un-chevalier-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1206,7 +1206,7 @@
 
 	<div class="modal fade" id="modal-comment-reduire-soi-meme-sa-dette-emotionnelle-pour-mieux-collaborer-en-equipe" tabindex="-1" role="dialog" aria-labelledby="#modal-comment-reduire-soi-meme-sa-dette-emotionnelle-pour-mieux-collaborer-en-equipe-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1244,7 +1244,7 @@
 
 	<div class="modal fade" id="modal-design-thinking-ux-design-sprint-et-si-diffusait-une-culture-de-design" tabindex="-1" role="dialog" aria-labelledby="#modal-design-thinking-ux-design-sprint-et-si-diffusait-une-culture-de-design-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1273,7 +1273,7 @@
 
 	<div class="modal fade" id="modal-keynote-thiagi" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-thiagi"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1311,7 +1311,7 @@
 
 	<div class="modal fade" id="modal-la-vie-est-une-jeu-de-roles-roles-emotions-securite-psychologique" tabindex="-1" role="dialog" aria-labelledby="#modal-la-vie-est-une-jeu-de-roles-roles-emotions-securite-psychologique-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1347,7 +1347,7 @@
 
 	<div class="modal fade" id="modal-le-fabuleux-destin-de-tim-member-la-der-des-ders" tabindex="-1" role="dialog" aria-labelledby="#modal-le-fabuleux-destin-de-tim-member-la-der-des-ders-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1385,7 +1385,7 @@
 
 	<div class="modal fade" id="modal-qui-veut-creer-son-jeu-peda" tabindex="-1" role="dialog" aria-labelledby="#modal-qui-veut-creer-son-jeu-peda-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1419,7 +1419,7 @@
 
 	<div class="modal fade" id="modal-rex-sur-code-moi-un-mouton" tabindex="-1" role="dialog" aria-labelledby="#modal-rex-sur-code-moi-un-mouton-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1476,7 +1476,7 @@
 
 	<div class="modal fade" id="modal-la-surete-psychologique-pour-un-collectif-perfomant" tabindex="-1" role="dialog" aria-labelledby="#modal-la-surete-psychologique-pour-un-collectif-perfomant-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1518,7 +1518,7 @@
 
 	<div class="modal fade" id="modal-comment-manipuler-les-adultes-pour-avoir-ce-quon-veut" tabindex="-1" role="dialog" aria-labelledby="#modal-comment-manipuler-les-adultes-pour-avoir-ce-quon-veut-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1564,7 +1564,7 @@
 
 	<div class="modal fade" id="modal-devoxx-for-kids" tabindex="-1" role="dialog" aria-labelledby="#modal-devoxx-for-kids-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1616,7 +1616,7 @@
 
 	<div class="modal fade" id="modal-qu-est-ce-qui-fait-d-une-equipe-une-equipe" tabindex="-1" role="dialog" aria-labelledby="#modal-qu-est-ce-qui-fait-d-une-equipe-une-equipe-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1656,7 +1656,7 @@
 
 	<div class="modal fade" id="modal-personal-kanban-pour-petits-et-grands" tabindex="-1" role="dialog" aria-labelledby="#modal-personal-kanban-pour-petits-et-grands-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1708,7 +1708,7 @@
 
 	<div class="modal fade" id="modal-saving-the-world" tabindex="-1" role="dialog" aria-labelledby="#modal-saving-the-world-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1742,7 +1742,7 @@
 
 	<div class="modal fade" id="modal-atelier-toyota-kata-apprendre-facilement-une-demarche-d-amelioration-continue" tabindex="-1" role="dialog" aria-labelledby="#modal-atelier-toyota-kata-apprendre-facilement-une-demarche-d-amelioration-continue-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1795,7 +1795,7 @@
 
 	<div class="modal fade" id="modal-favoriser-le-developpement-des-individus" tabindex="-1" role="dialog" aria-labelledby="#modal-favoriser-le-developpement-des-individus-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1822,7 +1822,7 @@
 
 	<div class="modal fade" id="modal-le-theatre-forum-de-jouons-ensemble-les-scenes-de-l-entreprise" tabindex="-1" role="dialog" aria-labelledby="#modal-le-theatre-forum-de-jouons-ensemble-les-scenes-de-l-entreprise-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1879,7 +1879,7 @@
 
 	<div class="modal fade" id="modal-attention-aux-biais-cognitifs-mieux-les-connaitre-pour-mieux-les-eviter" tabindex="-1" role="dialog" aria-labelledby="#modal-attention-aux-biais-cognitifs-mieux-les-connaitre-pour-mieux-les-eviter-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1913,7 +1913,7 @@
 
 	<div class="modal fade" id="modal-les-4-accords-tolteques-kesaco" tabindex="-1" role="dialog" aria-labelledby="#modal-les-4-accords-tolteques-kesaco-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -1962,7 +1962,7 @@
 
 	<div class="modal fade" id="modal-pedagogie-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-pedagogie-agile-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -2007,7 +2007,7 @@
 
 	<div class="modal fade" id="modal-parents-et-enfants-et-si-on-parlait-de-mieux-apprendre" tabindex="-1" role="dialog" aria-labelledby="#modal-parents-et-enfants-et-si-on-parlait-de-mieux-apprendre-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
@@ -2057,7 +2057,7 @@
 
 	<div class="modal fade" id="modal-biais-cognitifs-comment-les-identifier-et-les-combattre-en-equipe" tabindex="-1" role="dialog" aria-labelledby="#modal-biais-cognitifs-comment-les-identifier-et-les-combattre-en-equipe-label"
 		 aria-hidden="true">
-		<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-dialog modal-lg modal-session modal-session" role="document">
 			<div class="modal-content">
 				<div class="modal-body">
 					<div style="display: flex; justify-content: space-between">
