Ajout Haja Rambelontsalama

--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -1803,8 +1803,17 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					<p style="text-align: justify">Être devops ou ne pas l'être, telle n'est plus la question. Je vous propose à travers ce retex un partage autour de la transformation devops d'une équipe avec le prisme d'un product manager. Comment continuer à produire de la valeur, absorber sa dette et effectuer sa transformation devops ?</p>
 					<hr/>
 					<div>
+						<img src="orateurs/haja-rambelontsalama.jpg" style="height:8rem"/>
 						Haja Rambelontsalama - <a href="https://twitter.com/hrambelo">@hrambelo</a>
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Product manager et de coach devops à la direction technique Digital & Data d’Orange Business Services S.A., j'ai un background de développeur et d'architecte où j’ai embrassé l’agilité été choqué par la non-agilité très tôt dans mes projets.
+						<br/>
+						De la culture software craftsmanship à la culture produit, je suis également passionné par la dynamique de groupe et la collaboration.
+						<br/>
+						Quand je ne suis pas derrière mon ordinateur portable, c'est que j'entraine l'équipe de foot de mon fils et autrement vous pouvez me trouver sous le capot à restaurer mon ancienne.
+					</p>
 				</div>
 			</div>
 		</div>
