Modif bio Haja Rambelontsalama

--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -1808,11 +1808,11 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					</div>
 					<br/>
 					<p style="text-align: justify">
-						Product manager et de coach devops à la direction technique Digital & Data d’Orange Business Services S.A., j'ai un background de développeur et d'architecte où j’ai embrassé l’agilité été choqué par la non-agilité très tôt dans mes projets.
+						Product manager et coach devops, j'ai un background de développeur et d'architecte où j’ai été choqué par la non-agilité très tôt dans ma carrière.
 						<br/>
 						De la culture software craftsmanship à la culture produit, je suis également passionné par la dynamique de groupe et la collaboration.
 						<br/>
-						Quand je ne suis pas derrière mon ordinateur portable, c'est que j'entraine l'équipe de foot de mon fils et autrement vous pouvez me trouver sous le capot à restaurer mon ancienne.
+						Quand je ne suis pas derrière mon ordinateur portable, soit j'entraine l'équipe de foot de mon fils soit je suis sous le capot à restaurer mon ancienne.
 					</p>
 				</div>
 			</div>
