Ajout infos Damien Roquel

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -969,10 +969,26 @@
 					<p style="text-align: justify">
 						Vous connaissez le principe des réactions en chaîne ? Chaque maillon est essentiel au bon déroulé de la réaction complète. Comme dans une entreprise où, de l'agent d'entretien au dirigeant, chacun à un rôle à jouer pour atteindre un objectif commun, vous vivrez cela lors du Défi Collaboratif Lego. Les grand principes de l'agilité seront mis en pratique de façon ludique, ce qui rend cet atelier unique accessible au novice comme à l'expert de l'Agilité.
 					</p>
+					<br/>
 					<hr/>
 					<div>
-						Damien Roquel
+						<img src="orateurs/damien-roquel.jpg" style="height:8rem"/>
+						Damien Roquel - <a href="https://twitter.com/ContactBrique24">@ContactBrique24</a>
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Après des années dans l’industrie aéronautique, je découvre, « par hasard », l’Agilité en 2015… à Rennes
+						<br/><br/>
+						J’ y rencontre un univers où l’on essaie de remettre l’humain au cœur des processus. Où l’on répète à qui mieux-mieux que le client doit être un allié, que les produits doivent être fonctionnels pour apporter de la valeur (!), etc. Tout un programme !
+						<br/><br/>
+						C’est très bien tout cela, mais comment permettre aux personnes de comprendre ces valeurs et ces principes de façon simple afin de les transposer dans leur réalité professionnelle ?
+						<br/><br/>
+						Et bien j’ai décidé de passer par le Jeu. Non pas parce que c’est drôle, mais parce que bien débriefé c’est très puissant !
+						<br/><br/>
+						Platon disait « On en apprend plus sur quelqu’un en une heure de jeu qu’en une année de conversation ». Je le vérifie tous les jours.
+						<br/><br/>
+						Venez le vérifier lors de la session que je vous propose à Agile Tour Rennes 😉
+					</p>
 				</div>
 			</div>
 		</div>
@@ -1005,6 +1021,7 @@
 					<br/>
 					<p style="text-align: justify">
 						Guillaume Poupa, 32 ans, je suis architecte fonctionnel chez Orange Business Services depuis 10 ans. Touche à tout sportif, j'ai pratiqué le kayak polo pendant 15 ans, côtoyant et affrontant Camille - à l'époque - aux portes du haut-niveau et l'encourageant lors de ses premiers pas en équipe de France. J'interviens aujourd'hui sur les projets dans un rôle de "pompier" où face aux difficultés d'une équipe, j'apporte mon expertise méthodologique et le résultat de mon expérience, forgée par mon vécu et mes observations tant sportifs que professionnels.
+						<br/>
 						C'est donc tout naturellement qu'au détour d'une station essence, j'ai croisé Camille et lui ai demandé "tu connais l'agile tour, ..."
 					</p>
 					<hr/>
