Conf Frédéric Bouchery passée en REX

--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -654,7 +654,7 @@
 						<div class="fin heure">17h55</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--height2 c6 PM4 CF" style="position: absolute; left: 82.9999%; top: 1578px; opacity: 1; width: 16.4%;">
+				<div class="grid-item grid-item--height2 c6 PM4 RE" style="position: absolute; left: 82.9999%; top: 1578px; opacity: 1; width: 16.4%;">
 					<div>
 						<div class="debut heure">17h35</div>
 						<div class="salle heure">E</div>
@@ -2008,8 +2008,8 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					</div>
 					<hr/>
 					<div style="display:flex">
-						<div class="CF" style="width:2rem">&nbsp;</div>
-						<div style="margin-left:1rem">Conférence</div>
+						<div class="RE" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Retour d'expérience</div>
 					</div>
 					<hr/>
 					<p style="text-align: justify">
