Ajout de texte 'Salle' devant le nom des salles - vendredi soir et samedi

--- a/programme/vendredi_soir.html
+++ b/programme/vendredi_soir.html
@@ -24,8 +24,8 @@
 			<div class="input-group telephone" data-filter-group="FiltresTelephone" style="display: none;">
 				<select class="custom-select filter-custom-select" id="inputGroupSelect01" style="height: 2.26rem;">
 					<option>----- Choisissez votre filtre</option>
-					<option value=".c1">Focus</option>
-					<option value=".c2">Ouverture</option>
+					<option value=".c1">Salle Focus</option>
+					<option value=".c2">Salle Ouverture</option>
 				</select>
 			</div>
 		</div>
@@ -34,8 +34,8 @@
 		<div class="col-12">
 			<div class="grid" style="position: relative; height: 1686px;"><!-- data-isotope='{ "itemSelector": ".grid-item", "layoutMode": "fitRows" }'-->
 				<div class="grid-sizer"></div>
-				<div class="grid-item  grid-item--width3 grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 49.6%"><h2>Focus</h2></div>
-				<div class="grid-item grid-item--width3 grid-item--height1 theme c2" style="position: absolute; left: 49.6%; top: 0px; width: 49.6%;"><h2>Ouverture</h2></div>
+				<div class="grid-item  grid-item--width3 grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 49.6%"><h2>Salle Focus</h2></div>
+				<div class="grid-item grid-item--width3 grid-item--height1 theme c2" style="position: absolute; left: 49.6%; top: 0px; width: 49.6%;"><h2>Salle Ouverture</h2></div>
 
 				<div class="grid-item grid-item--width3 grid-item--height3 c1 CF" style="position: absolute; left: 0%; top: 442px; opacity: 1; width: 16.4%;">
 					<div>
