--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -30,12 +30,12 @@
 					<div style="margin-top:0.8em;">
 						<span style="margin-left:50px;">Filtrez sur une salle : </span>
 						<button class="button is-checked" data-filter="" onclick="resizeAll();">Tout voir</button>
-						<button class="button" data-filter=".c1" onclick="resizeThemes();">Performance</button>
-						<button class="button" data-filter=".c2" onclick="resizeThemes();">Focus</button>
-						<button class="button" data-filter=".c3" onclick="resizeThemes();">Ouverture</button>
-						<button class="button" data-filter=".c4" onclick="resizeThemes();">Respect</button>
-						<button class="button" data-filter=".c5" onclick="resizeThemes();">Courage</button>
-						<button class="button" data-filter=".c6" onclick="resizeThemes();">Engagement</button>
+						<button class="button" data-filter=".c1" onclick="resizeThemes();">Salle Performance</button>
+						<button class="button" data-filter=".c2" onclick="resizeThemes();">Salle Focus</button>
+						<button class="button" data-filter=".c3" onclick="resizeThemes();">Salle Ouverture</button>
+						<button class="button" data-filter=".c4" onclick="resizeThemes();">Salle Respect</button>
+						<button class="button" data-filter=".c5" onclick="resizeThemes();">Salle Courage</button>
+						<button class="button" data-filter=".c6" onclick="resizeThemes();">Salle Engagement</button>
 					</div>
 				</div>
 				<div style="margin-top:0.8em;">
@@ -60,12 +60,12 @@
 					<option value=".RE" class="RE" style="opacity: 1;">Retour d'expérience</option>
 					<option value=".TR" class="TR" style="opacity: 1;">Table ronde</option>
 					<option>----- Choisissez une salle</option>
-					<option value=".c1">Performance</option>
-					<option value=".c2">Focus</option>
-					<option value=".c3">Ouverture</option>
-					<option value=".c4">Respect</option>
-					<option value=".c5">Courage</option>
-					<option value=".c6">Engagement</option>
+					<option value=".c1">Salle Performance</option>
+					<option value=".c2">Salle Focus</option>
+					<option value=".c3">Salle Ouverture</option>
+					<option value=".c4">Salle Respect</option>
+					<option value=".c5">Salle Courage</option>
+					<option value=".c6">Salle Engagement</option>
 					<option>----- Choisissez un créneau</option>
 					<option value=".AM1">9h10</option>
 					<option value=".AM2">10h30</option>
@@ -82,12 +82,12 @@
 		<div class="col-12">
 			<div class="grid" style="position: relative; height: 1686px;">
 				<div class="grid-sizer"></div>
-				<div class="grid-item grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 16.4%;"><h2>Performance</h2></div>
-				<div class="grid-item grid-item--height1 theme c2" style="position: absolute; left: 16.5993%; top: 0px; width: 16.4%;"><h2>Focus</h2></div>
-				<div class="grid-item grid-item--height1 theme c3" style="position: absolute; left: 33.1987%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);"><h2>Ouverture</h2></div>
-				<div class="grid-item grid-item--height1 theme c4" style="position: absolute; left: 49.798%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);"><h2>Respect</h2></div>
-				<div class="grid-item grid-item--height1 theme c5" style="position: absolute; left: 66.3974%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);"><h2>Courage</h2></div>
-				<div class="grid-item grid-item--height1 theme c6" style="position: absolute; left: 82.9967%; top: 0px; width: 16.4%;"><h2>Engagement</h2></div>
+				<div class="grid-item grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 16.4%;"><h2>Salle Performance</h2></div>
+				<div class="grid-item grid-item--height1 theme c2" style="position: absolute; left: 16.5993%; top: 0px; width: 16.4%;"><h2>Salle Focus</h2></div>
+				<div class="grid-item grid-item--height1 theme c3" style="position: absolute; left: 33.1987%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);"><h2>Salle Ouverture</h2></div>
+				<div class="grid-item grid-item--height1 theme c4" style="position: absolute; left: 49.798%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);"><h2>Salle Respect</h2></div>
+				<div class="grid-item grid-item--height1 theme c5" style="position: absolute; left: 66.3974%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);"><h2>Salle Courage</h2></div>
+				<div class="grid-item grid-item--height1 theme c6" style="position: absolute; left: 82.9967%; top: 0px; width: 16.4%;"><h2>Salle Engagement</h2></div>
 
 				<!------------------>
 				<!-- 8h30 > 10h15 -->
