Ajout Helene et Samuel Durand

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -1745,7 +1745,25 @@
 					</p>
 					<hr/>
 					<div>
-						Hélène et Samuel Durand - Une responsable pédagogique de crèche Montessori et un Coach Agile, avant-tout 2 parents animés par une même passion : développer les individus
+						<img src="orateurs/helene-durand.jpg" style="height:8rem"/>
+						Hélène Durand
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je suis responsable pédagogique de crèche Montessori avec 15 ans d’expérience dans la petite enfance et coach en développement personnel et parental.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/samuel-durand.jpg" style="height:8rem"/>
+						Samuel Durand
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						je suis en charge du développement des nouvelles méthodes de travail et du bien-être au travail à Orange Business Services, coach Agile et en développement personnel.
+					</p>
+					<hr/>
+					<div>
+						Hélène et Samuel, avant-tout 2 parents de 4 enfants de 5 à 14 ans animés par une même passion : développer les individus et aimant partager.  Nous proposons d’explorer les points communs entre les approches Montessori et Agile pour vous partager les pratiques communes qui favorisent le développement des individus, petits et grands, qui nous entourent... car finalement ce sont les mêmes (ou presque) !
 					</div>
 				</div>
 			</div>
