Performance -> Performance collective

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -30,7 +30,7 @@
 					<div style="margin-top:0.8em;">
 						<span style="margin-left:50px;">Filtrez sur une salle : </span>
 						<button class="button is-checked" data-filter="" onclick="resizeAll();">Tout voir</button>
-						<button class="button" data-filter=".c1" onclick="resizeThemes();">Salle Performance</button>
+						<button class="button" data-filter=".c1" onclick="resizeThemes();">Salle Performance collective</button>
 						<button class="button" data-filter=".c2" onclick="resizeThemes();">Salle Focus</button>
 						<button class="button" data-filter=".c3" onclick="resizeThemes();">Salle Ouverture</button>
 						<button class="button" data-filter=".c4" onclick="resizeThemes();">Salle Respect</button>
@@ -60,7 +60,7 @@
 					<option value=".RE" class="RE" style="opacity: 1;">Retour d'expérience</option>
 					<option value=".TR" class="TR" style="opacity: 1;">Table ronde</option>
 					<option>----- Choisissez une salle</option>
-					<option value=".c1">Salle Performance</option>
+					<option value=".c1">Salle Performance collective</option>
 					<option value=".c2">Salle Focus</option>
 					<option value=".c3">Salle Ouverture</option>
 					<option value=".c4">Salle Respect</option>
@@ -82,7 +82,7 @@
 		<div class="col-12">
 			<div class="grid" style="position: relative; height: 1686px;">
 				<div class="grid-sizer"></div>
-				<div class="grid-item grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 16.4%;"><h2>Salle Performance</h2></div>
+				<div class="grid-item grid-item--height1 theme c1" style="position: absolute; left: 0%; top: 0px; width: 16.4%;"><h2>Performance Collective</h2></div>
 				<div class="grid-item grid-item--height1 theme c2" style="position: absolute; left: 16.5993%; top: 0px; width: 16.4%;"><h2>Salle Focus</h2></div>
 				<div class="grid-item grid-item--height1 theme c3" style="position: absolute; left: 33.1987%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);"><h2>Salle Ouverture</h2></div>
 				<div class="grid-item grid-item--height1 theme c4" style="position: absolute; left: 49.798%; top: 0px; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.002px, 0px, 0px);"><h2>Salle Respect</h2></div>
