Ajout Mathieu Gioani

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -1196,8 +1196,13 @@
 					</p>
 					<hr/>
 					<div>
+						<img src="orateurs/matthieu-gioani.jpg" style="height:8rem"/>
 						Matthieu Gioani
 					</div>
+					<br/>
+					<p style="text-align: justify">
+						Matthieu Gioani, designer, consultant & facilitateur. Je cherche à rendre le monde plus simple et réjouissant par l’accompagnement des équipes et des managers sur les sujets d’émergence, de design et d’innovation depuis bientôt 10 ans.
+					</p>
 				</div>
 			</div>
 		</div>
