Ajout photo David Desfougeres

--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -1701,6 +1701,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					</p>
 					<hr/>
 					<div>
+						<img src="orateurs/david-desfougeres.png" style="height:8rem"/>
 						David Desfougeres - <a href="https://twitter.com/ddesfougeres">@ddesfougeres</a>
 					</div>
 					<br/>
